# liveportrait_gst

./: .gitignore  CMakeLists.txt  Dockerfile  INSTRUCTIONS.md  PROGRESS.md  README.md  compile_trt.py  liveportrait_process.py  patched_run.py  stitching_eye.onnx
src/: cuda_memory_manager.cpp  cuda_memory_manager.h  gstliveportrait.cpp  gstliveportrait.h  image_proc.cu  image_proc.h  liveportrait_pipeline.cpp  liveportrait_pipeline.h  test_memory.cpp  test_trt.cpp  trt_wrapper.cpp  trt_wrapper.h
tutorial/: tutorial.ipynb
